---
source: crates/mys/tests/shell_tests.rs
description: tests/shell_tests/new_tests/new_then_test.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# Copyright (c) The Social Proof Foundation, LLC.
# SPDX-License-Identifier: Apache-2.0

# check that mys move new followed by mys move test succeeds
mys move new example

# we mangle the generated toml file to replace the framework dependency with a local dependency
FRAMEWORK_DIR=$(echo $CARGO_MANIFEST_DIR | sed 's#/crates/mys##g')
cat example/Move.toml \
  | sed 's#\(MySocial = .*\)git = "[^"]*", \(.*\)#\1\2#' \
  | sed 's#\(MySocial = .*\), rev = "[^"]*"\(.*\)#\1\2#' \
  | sed 's#\(MySocial = .*\)subdir = "\([^"]*\)"\(.*\)#\1local = "FRAMEWORK/\2"\3#' \
  | sed "s#\(MySocial = .*\)FRAMEWORK\(.*\)#\1$FRAMEWORK_DIR\2#" \
  > Move.toml
mv Move.toml example/Move.toml

cd example && mys move test

----- results -----
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY Mys
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Running Move unit tests
Test result: OK. Total tests: 0; passed: 0; failed: 0

----- stderr -----
